--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ h1 {
   <body>
     <main>
       <h1 class-"typing">www.urmama.net</h1>
-      <p>Thanks to Luke for NOT donateing the money</p>
+      <p>Thanks to Luke for NOT donating the money</p>
     </main>
   </body>
 </html>
