--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ h1 {
   </head>
   <body>
     <main>
-      <h1 class-"typing">www.urmama.net</h1>
+      <h1 class="typing">www.urmama.net</h1>
       <p>Thanks to Luke for NOT donating the money</p>
     </main>
   </body>
