--- a/index.html
+++ b/index.html
@@ -1,189 +1,130 @@
 <!DOCTYPE html>
 <html>
-  <canvas></canvas>
-  <script>
-    // http://www.cssplant.com/clip-path-generator
-    p = [
-      [389, 246, 0],
-      [410, 255, 20],
-      [413, 268, 7],
-      [431, 261, 12],
-      [418, 244, 30],
-      [416, 217, 25],
-      [420, 205, 8],
-      [427, 227, -20],
-      [432, 236, 5],
-      [444, 228, 12],
-      [451, 232, 41],
-      [446, 246, 72],
-      [443, 264, 96],
-      [446, 278, 65],
-      [463, 267, 20],
-      [460, 258, -10],
-      [464, 243, -20],
-      [459, 233, 0],
-      [475, 225, 22],
-      [484, 225, 29],
-      [490, 214, 51],
-      [476, 202, 55],
-      [462, 202, 55],
-      [446, 205, 42],
-      [440, 192, 42],
-      [430, 183, 72],
-      [413, 184, 58],
-      [406, 191, 32],
-      [406, 207, 0],
-      [402, 220, 0],
-      [390, 222, 20],
-      [385, 228, 10],
-      [389, 246, 0]
-    ];
-  </script>
-  <style>
-    body {
-      overflow: hidden;
-      margin: 0;
-    }
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-  <script>
-    var w = window.innerWidth,
-      h = window.innerHeight;
-    window.onresize = function() {
-      var w = window.innerWidth,
-        h = window.innerHeight;
-      camera.aspect = w / h;
-      camera.updateProjectionMatrix();
-      renderer.setSize(w, h);
-    };
 
-    cameraSpeed = 0.0003;
-    lightSpeed = 0.001;
-    tubularSegments = 1000;
-    radialSegments = 3;
-    tubeRadius = 2;
-    ambientLight = 0x222222;
-    lightColor = 0xffffff;
-    lightIntensity = 1;
-    lightDistance = 20;
-    hs = 0; // Hue-Start
-    he = 360; // Hue-End
+<head>
+    <title>MY-Chat</title>
+    <link rel="stylesheet" href="../assets/bootstrap4.1/css/bootstrap.css">
+    <link rel="stylesheet" href="../assets/bootstrap4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/bootstrap4.1/bootstrap-social/bootstrap-social.css">
+    <script src="../assets/bootstrap4.1/popperJs/popperV1.14.js"></script>
+    <script src="../assets/bootstrap4.1/jquery/jqueryV3.3.1.js"></script>
+    <script src="../assets/bootstrap4.1/js/bootstrap.js"></script>
+    <script src="../assets/bootstrap4.1/js/bootstrap.min.js"></script>
+    <script src="../assets/bootstrap4.1/sweetAlert/sweetAlert.js"></script>
+    <link rel="stylesheet" href="../assets/bootstrap4.1/fontawesome/fontawesome-5.7.1/css/all.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/chatStyle.css">
+</head>
 
-    var renderer = new THREE.WebGLRenderer({
-      canvas: document.querySelector("canvas"),
-      antialias: true
-    });
-    renderer.setSize(w, h);
+<body>
+    <ul class="nav justify-content-center fixed-top">
+        <li class="nav-item col-10" style="box-shadow: 0px 0px 20px black; border-bottom-right-radius: 50px;border-bottom-left-radius: 50px; font-size: 25px; text-align: center; font-weight: bolder; background-color: rgba(20, 20, 58, 0.562)">
+            MY-Chat
+        </li>
+        <span id="action_menu_btn"><i id="menu" class="fas fa-bars"></i></span>
+        <div class="action_menu">
+            <ul>
+                <li onClick="window.location = './profile.html'">TimeLine</li>
+                <li onClick="logOut()">LogOut</li>
+            </ul>
+        </div>
+    </ul>
+    <br><br><br>
+    <div id="pc">
+        <div class="container-fluid h-100">
+            <div class="row justify-content-center h-100">
+                <div class="col-md-4 col-xl-3 chat">
+                    <div class="card mb-sm-3 mb-md-0 contacts_card">
+                        <div class="card-header">
 
-    var scene = new THREE.Scene();
-    var camera = new THREE.PerspectiveCamera(60, w / h, 0.001, 1000);
+                        </div>
+                        <div class="card-body contacts_body">
+                            <ul id="contact" class="contacts">
+                                <h2 align="center">No Users</h2>
+                            </ul>
+                        </div>
+                        <div class="card-footer"></div>
+                    </div>
+                </div>
+                <div class="col-md-8 col-xl-6 chat">
+                    <div class="card">
+                        <div class="card-header msg_head">
+                            <div id="chatHeader" class="d-flex bd-highlight">
 
-    var starsGeometry = new THREE.Geometry();
-    for (i = 0; i < 3000; i++) {
-      var star = new THREE.Vector3();
-      star.x = THREE.Math.randFloatSpread(1500);
-      star.y = THREE.Math.randFloatSpread(1500);
-      star.z = THREE.Math.randFloatSpread(1500);
-      starsGeometry.vertices.push(star);
-    }
-    var starsMaterial = new THREE.PointsMaterial({ color: 0xffffff });
-    var starField = new THREE.Points(starsGeometry, starsMaterial);
-    scene.add(starField);
+                            </div>
+                        </div>
+                        <div id="chatBody" class="card-body msg_card_body">
+                            <h4 align="center">Pleas select user first</h4>
+                        </div>
+                        <div id="textBar" class="card-footer">
 
-    for (i = 0; i < p.length; i++) {
-      var x = p[i][0];
-      var y = p[i][2];
-      var z = p[i][1];
-      p[i] = new THREE.Vector3(x, y, z);
-    }
-    var path = new THREE.CatmullRomCurve3(p);
-    var geometry = new THREE.TubeGeometry(
-      path,
-      tubularSegments,
-      tubeRadius,
-      radialSegments,
-      true
-    );
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="mobile" style="display: none;">
+        <div class="container-fluid h-100">
+            <div class="row justify-content-center h-100">
+                <div id="mbUsers" class="col-10 chat">
+                    <div class="card mb-sm-3 mb-md-0 contacts_card">
+                        <div class="card-header">
 
-    hue = hs;
-    hup = true;
-    for (i = 0; i < geometry.faces.length; i++) {
-      hup == 1 ? hue++ : hue--;
-      hue == he ? (hup = false) : hue == hs ? (hup = true) : 0;
-      geometry.faces[i].color = new THREE.Color("hsl(" + hue + ",100%,50%)");
-    }
+                        </div>
+                        <div class="card-body contacts_body">
+                            <ul id="mbContact" class="contacts">
+                                <h2 align="center">No Users</h2>
+                            </ul>
+                        </div>
+                        <div class="card-footer"></div>
+                    </div>
+                </div>
+                <div id="mbChat" style="display: none;" class="col-10 chat">
+                    <div class="card">
+                        <div class="card-header msg_head">
+                            <div>
+                                <i onClick="goBack()" class="fas fa-backward"> Go Back</i>
+                            </div>
+                            <br>
+                            <div id="mbChatHeader" class="d-flex bd-highlight">
 
-    var material = new THREE.MeshLambertMaterial({
-      side: THREE.BackSide,
-      vertexColors: THREE.FaceColors,
-      wireframe: true
-    });
+                            </div>
+                        </div>
+                        <div id="mbChatBody" class="card-body msg_card_body">
+                            <h4 align="center">Pleas select user first</h4>
+                        </div>
+                        <div id="mbTextBar" class="card-footer">
 
-    var tube = new THREE.Mesh(geometry, material);
-    scene.add(tube);
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    var light = new THREE.PointLight(0xffffff, 1, 50);
-    scene.add(light);
-    var light2 = new THREE.AmbientLight(ambientLight);
-    scene.add(light2);
+    </div>
 
-    var l1 = new THREE.PointLight(lightColor, lightIntensity, lightDistance);
-    scene.add(l1);
-    var l2 = new THREE.PointLight(lightColor, lightIntensity, lightDistance);
-    scene.add(l2);
-    var l3 = new THREE.PointLight(lightColor, lightIntensity, lightDistance);
-    scene.add(l3);
-    var l4 = new THREE.PointLight(lightColor, lightIntensity, lightDistance);
-    scene.add(l4);
-    var l5 = new THREE.PointLight(lightColor, lightIntensity, lightDistance);
-    scene.add(l5);
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+    <script>
+        var config = {
+            apiKey: "AIzaSyBjjpDjoyFTe63gjPkHRA4Dm7UMlblCeIk",
+            authDomain: "chat-app-7365b.firebaseapp.com",
+            databaseURL: "https://chat-app-7365b.firebaseio.com",
+            projectId: "chat-app-7365b",
+            storageBucket: "chat-app-7365b.appspot.com",
+            messagingSenderId: "833686421119"
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script src="../assets/js/authontication.js"></script>
+    <script src="../assets/js/chat.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#action_menu_btn').click(function () {
+                $('.action_menu').toggle();
+            });
+        });
+    </script>
+</body>
 
-    var pct = 0;
-    var pct2 = 0;
-    function render() {
-      pct += cameraSpeed;
-      pct2 += lightSpeed;
-      var pt1 = path.getPointAt(pct % 1);
-      var pt2 = path.getPointAt((pct + 0.01) % 1);
-      camera.position.set(pt1.x, pt1.y, pt1.z);
-      camera.lookAt(pt2);
-      light.position.set(pt2.x, pt2.y, pt2.z);
-
-      l1.position.set(
-        path.getPointAt((pct2 + 0.0) % 1).x,
-        path.getPointAt((pct2 + 0.0) % 1).y,
-        path.getPointAt((pct2 + 0.0) % 1).z
-      );
-      l2.position.set(
-        path.getPointAt((pct2 + 0.2) % 1).x,
-        path.getPointAt((pct2 + 0.2) % 1).y,
-        path.getPointAt((pct2 + 0.2) % 1).z
-      );
-      l3.position.set(
-        path.getPointAt((pct2 + 0.4) % 1).x,
-        path.getPointAt((pct2 + 0.4) % 1).y,
-        path.getPointAt((pct2 + 0.4) % 1).z
-      );
-      l4.position.set(
-        path.getPointAt((pct2 + 0.6) % 1).x,
-        path.getPointAt((pct2 + 0.6) % 1).y,
-        path.getPointAt((pct2 + 0.6) % 1).z
-      );
-      l5.position.set(
-        path.getPointAt((pct2 + 0.8) % 1).x,
-        path.getPointAt((pct2 + 0.8) % 1).y,
-        path.getPointAt((pct2 + 0.8) % 1).z
-      );
-
-      renderer.render(scene, camera);
-      requestAnimationFrame(render);
-    }
-    requestAnimationFrame(render);
-  </script>
 </html>
