--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype HTML>
 <HTML>
-    F
+    <h1 id="test"></h1>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha1.js"></script>
+<script>
+    var hash = CryptoJS.SHA1("Message");
+    getElementByID("test").innerHTML = hash
+</script>
 </HTML>
