--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha1.js"></script>
 <script>
     var hash = CryptoJS.SHA1("Message");
-    getElementByID("test").innerHTML = hash
+   console.log(hash)
 </script>
 </HTML>
