--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha1.js"></script>
 <script>
     var hash = CryptoJS.SHA1("GavinF0x!");
+    var hash2 = CryptoJS.SHA1("GavinF0x!");
    console.log(hash)
+    console.log(hash2)
 </script>
 </HTML>
