--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     var hash2 = CryptoJS.SHA1("24gfox");
     console.log(hash)
     console.log(hash2)
-    if (hash12 == hash) return console.log("true1")
-    if (hash22 == hash2) return console.log("true2")
+    if (hash12 == hash) {console.log("true1")}
+    if (hash22 == hash2) {console.log("true2")}
     
 </script>
 </HTML>
