--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
     <h1 id="test"></h1>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha1.js"></script>
 <script>
-    var hash12 = [542310225, 1022376888, -796525711, -1020598734, 101868815]
-    var hash22 = ""
-    var hash = CryptoJS.SHA1("GavinF0x!");
-    var hash2 = CryptoJS.SHA1("24gfox");
-    console.log(hash)
-    console.log(hash2)
-    if (hash12 == hash) {console.log("true1")}
-    if (hash22 == hash2) {console.log("true2")}
+const digest = async ({ algorithm = "SHA-256", message }) =>
+  Array.prototype.map
+    .call(
+      new Uint8Array(
+        await crypto.subtle.digest(algorithm, new TextEncoder().encode(message))
+      ),
+      (x) => ("0" + x.toString(16)).slice(-2)
+    )
+    .join("");
+
+digest({message: "GavinF0x!"}).then(console.log)
     
 </script>
 </HTML>
