--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ const digest = async ({ algorithm = "SHA-256", message }) =>
     .join("");
 
 digest({message: "GavinF0x!"}).then(console.log)
+    digest({message: "24gfox"}).then(console.log)
     
 </script>
 </HTML>
