--- a/index.html
+++ b/index.html
@@ -2,19 +2,6 @@
 <HTML>
     <h1 id="test"></h1>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha1.js"></script>
-<script>
-const digest = async ({ algorithm = "SHA-256", message }) =>
-  Array.prototype.map
-    .call(
-      new Uint8Array(
-        await crypto.subtle.digest(algorithm, new TextEncoder().encode(message))
-      ),
-      (x) => ("0" + x.toString(16)).slice(-2)
-    )
-    .join("");
-
-digest({message: "GavinF0x!"}).then(console.log)
-    digest({message: "24gfox"}).then(console.log)
+Ur MaMa
     
-</script>
 </HTML>
